--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,1 +1,13 @@
+تعداد جزهای قرآن که خوانده شده:
+{{ quran }}
+---
+تعداد صلواتهایی که فرستاده شده:
+{{ salavat }}
+---
+تعداد فاتحه هایی که خوانده شده:
+{{ fatehe }}
+---
+تعداد سایر دعاهایی که خوانده شده:
+{{ doa }}
+---
 {{ text }}
